--- a/src/ItraMessenger/ItraMessenger.WEB/Views/Messages/Index.cshtml
+++ b/src/ItraMessenger/ItraMessenger.WEB/Views/Messages/Index.cshtml
@@ -7,10 +7,8 @@
 <div class="text-center">
   <div class="card">
     <div class="card-header">
-      <div class="d-flex justify-content-between">
-        <div class="d-flex align-content-center">
-          <p class="text-black">@Context.User.Identity!.Name's received messages</p>
-        </div>
+      <div class="d-flex align-items-center justify-content-between">
+        <p class="text-black">@Context.User.Identity!.Name's received messages</p>
         <button type="button" class="btn btn-outline-primary" id="openModal" data-toggle="modal" data-target="#writeMessageModal">
           <span><i class="bi bi-envelope"></i> Write message</span>
         </button>
@@ -25,9 +23,11 @@
           {
             <div class="accordion-item">
               <div class="accordion-header" id="heading_@i">
-                <div class="accordion-button d-flex justify-content-center collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@i" aria-expanded="false" aria-controls="collapse_@i">
-                  <div class="me-2"><span class="text-muted small">From: </span>@item.SenderName</div>
-                  <div class="me-2"><span class="text-muted small">Title: </span>@item.Title</div>
+                <div class="d-flex justify-content-between collapsed p-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@i" aria-expanded="false" aria-controls="collapse_@i">
+                  <div class="d-flex">
+                    <div class="me-2"><span class="text-muted small">From: </span>@item.SenderName</div>
+                    <div class="me-2"><span class="text-muted small">Title: </span>@item.Title</div>
+                  </div>
                   <div class="text-muted small utc-date-time">@item.Date</div>
                 </div>
               </div>
