--- a/src/ItraMessenger/ItraMessenger.WEB/Views/Messages/Index.cshtml
+++ b/src/ItraMessenger/ItraMessenger.WEB/Views/Messages/Index.cshtml
@@ -23,7 +23,7 @@
           {
             <div class="accordion-item">
               <div class="accordion-header" id="heading_@i">
-                <div class="d-flex justify-content-between collapsed p-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@i" aria-expanded="false" aria-controls="collapse_@i">
+                <div class="d-flex justify-content-between collapsed p-3 bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@i" aria-expanded="false" aria-controls="collapse_@i">
                   <div class="d-flex">
                     <div class="me-2"><span class="text-muted small">From: </span>@item.SenderName</div>
                     <div class="me-2"><span class="text-muted small">Title: </span>@item.Title</div>
